2001-08-20  Miguel de Icaza  <miguel@ximian.com>

	* mono/Makefile.am (SUBDIRS): Remove `test' from here to allow us
	to pass make distcheck

	* mono/wrapper/Makefile.am (EXTRA_DIST): Include genwrapper.pl

	* configure.in, Makefile.am, runtime/Makefile.am (dist-hook,
	install-data-hook): Added mechanism to distribute and install the
	dll files.

2001-08-20  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/stream.cs: new tests for the Stream class

	* configure.in: I really need LIBTOOL for libmonowrapper.so, so I
	added it again.

2001-08-16  Alex Graveley  <alex@ximian.com>

	* configure.in: Replace AM_PROG_LIBTOOL with AC_PROG_RANLIB. This
	removes libtool dependency on all of Mono.

2001-08-10  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/array.cs: more array tests

2001-08-09  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/array.cs: more array tests

2001-08-06  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/pinvoke.cs: we can now print strings ;-)

	* mono/tests/array.cs: new test for arrays

2001-08-02  Alex Graveley  <alex@ximian.com>

        * libffi/*: Import libffi CVS version, with minor changes to make it 
          compile.

        * mono/interpreter/Makefile.am: Link against 
          ../../libffi/.libs/libffi.a.

        * Makefile.am: Add libffi

        * autogen.sh: Replace with adapted gnome autogen.sh

        * configure.in: Add AC_CONFIG_SUBDIRS(libffi).

2001-08-02  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/pinvoke.cs: impl.

Wed Aug 1 22:34:52 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* configure.in, mono/tests: added some tests for the interpreter.

2001-07-15  Sean MacIsaac  <macisaac@ximian.com>

	* doc/download: added instructions for cygwin
	
	* doc/c-sharp: removed bit about compiling
	
	* status/compare-assembly.cs: basedir should be there if
	parameters are provided.

	* status/makefile: made targets to dump info.
	
2001-07-15  Joe Shaw  <joe@ximian.com>
